# env-verify

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  action.yml  justfile
.github/workflows/: build.yaml  ci.yaml  release.yaml
src/: main.rs
tests/readme-basic-env/: expected-output.json  schema.json
tests/readme-var-secret-substitution/: env-secrets.json  env-vars.json  expected-output.json  input.json  schema.json
tests/readme-var-substitution/: env-vars.json  expected-output.json  input.json  schema.json
tests/substitutes-combined/: env-secrets.json  env-vars.json  expected-output.json  input.json  schema.json
tests/substitutes-env/: input.json
tests/substitutes-secret/: env-secrets.json  expected-output.json
